syntax = "proto3";
package todobackend;

enum Res {
  Ok = 0;
  Err = 1;
}

service TodoBackend {
  rpc AddRPC(AddRequest) returns (AddResponse);
  rpc GetRPC(GetRequest) returns (GetResponse);
}

message AddRequest {
  string item = 1;
}

message AddResponse {
  Res res = 1;
}

message GetRequest {
}

message GetResponse {
  repeated string items = 1;
}
